Fixed text overflow issue, need to fix the right page aalignment issue

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -46,13 +46,21 @@ body{
     padding: 0px;
     box-sizing: border-box;
     transform: rotateY(0deg) rotateX(0deg);
-    text-align-last: left;
-    text-align: justify;
+    
 
     transition: transform 0.5s ease-out;
 
 }
 
+
+.left{
+    text-align-last: left;
+    text-align: justify;
+}
+.right{
+    /* text-align-last: right; */
+    text-align: justify;
+}
 .page-content {
     /* display: -webkit-box; */
     /* -webkit-line-clamp: 5;              number of lines */
@@ -71,6 +79,10 @@ body{
 }
 .page-content:focus{
     outline: none;
+}
+.page-content::selection {
+    background: #ffefd4;   /* faded parchment yellow */
+    color: #4a2e0c;         /* dark ink brown */
 }
 
 .flipping{
